added plots of TiO2 permittivity models

--- a/appendices.tex
+++ b/appendices.tex
@@ -8,3 +8,65 @@
 \section{Appendix B: Permittivity spectra of selected materials} % TODO
 
 \section{Appendix C: Scripts used for numerical simulations} % TODO
+
+\section{Appendix D: Notation} % TODO
+% Preliminary
+
+
+%% we will try to build the theory from first principles
+
+\paragraph{General notation of vectors and scalars} %{{{
+$x', x''$ are the	real and imaginary part of $x$\\
+$k$ 		is the magnitude of the vector $\kk$\\
+
+Except for where it is important, the explicit time, space or frequency dependence is omitted. So for electric field we write $\E$ instead of $\E(\rr,t)$.
+
+\begin{table}[ht]   \caption{Table of abbreviations}  \label{tb_shortcuts} \centering 
+\begin{tabular}{ll}
+ \toprule
+Abbreviation & Meaning	\\
+ \hline
+PhC 		& Photonic crystal\\
+MM			& Metamaterial\\
+PBG			& Photonic band-gap\\
+FDTD 		& Finite-difference time-domain (numerical simulation)\\
+TDTS 		& Time-domain terahertz spectroscopy\\
+FDM 		& Filter diagonalisation method (signal processing algorithm)\\
+ \bottomrule
+ \end{tabular} \end{table}
+%}}}
+
+\begin{table}[ht]   \caption{Symbols used}  \label{tb_symbols} \centering 
+\begin{tabular}{ll}
+ \toprule
+Symbol & Meaning	\\
+ \hline
+$\Im$ 		& Electric field\\
+$\E$ 		& Electric field\\
+$\E_0$ 		& Amplitude of the electric field\\
+$\D$ 		& Electric displacement\\
+$\HH$ 		& Magnetic field\\
+$\B$ 		& Magnetic displacement\\
+$f(t), F(\omega)$ & General function in time domain, and its counterpart in Frequency domain \\
+$\chi_e^{\rm(Loc)}$ & Electric susceptibility in the local approximantion \\
+$\varepsilon_0$ &vacuum permittivity, $8.85\cdot10^{-12}$ F/m\\
+$\varepsilon^{\rm(Loc)}_r$ &Relative permittivity in the local approximation\\
+$\mu_0$		&vacuum permeability, $1.25\cdot10^{-6}$ H/m \\
+$\mu^{\rm(Loc)}_r$ &relative permeability in the local approximation\\
+$\chi_e$ 	& Electric susceptibility\\
+$\Neff$ 	& Effective index of refraction (of periodic medium)\\
+$\eeff$ 	& Effective permittivity\\
+$\meff$ 	& Effective permeability\\
+$\Zeff$ 	& Effective impedance\\
+$\ii$		& $\sqrt{-1}$\\
+$\rr$, $\brho$ 		& Radius vector\\
+$t$, $\tau$ 		& Time\\
+$\omega$ 	& Angular frequency\\
+$\kk$ 		& Wave vector in homogeneous medium\\
+$\KK$ 		& Wave vector in periodic medium\\
+$\epsr$ 	& Relative dielectric permittivity\\
+$e$ 		& 2.718\ldots\\
+$\mathcal F$ 		& Fourier transform\\
+ \bottomrule
+ \end{tabular} \end{table}
+%}}}
