--- a/theory.tex
+++ b/theory.tex
@@ -16,10 +16,12 @@
 %%			* Kramers-Kronig (in complex plane)
 
 %% TODO sources to be added:
-%%		
 
 %% TODO time convention
 
+%% """ If a too-simplistic physical theory is forced to predict or explain data that are not within its scope,
+%%     it can often do so, but without giving any physical insight. Such a result is not a proof of the theory to be
+%%     applicable to the problem, and in some cases not even of the theory to make any sense whatsoever."""
 
 
 \add{The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner, avoiding many relevant topics such as TODO, which are not essential for the description of metamaterials.  This serves as a basis for transforming into the so-called Landau-Lifshitz formulation of electrodynamis for spatially-dispersive media, which is elaborated more in detail.}
